# crediva-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  licenses.py  monitors.py  webhooks.py
app/core/: config.py
app/ingest/: normalizer.py  run_sample.py
app/ingest/sources/: base.py  sample.py
app/models/: __init__.py  license.py  monitor.py
app/schemas/: license.py  monitor.py
app/services/: csv_export.py  license_search.py  renewal.py
app/static/: app.js  index.html  styles.css
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_app_integration.py  test_renewal.py
